[gd_scene load_steps=4 format=2]

[ext_resource path="res://menus/heroPage.gd" type="Script" id=1]
[ext_resource path="res://gui/icons/up_arrow.png" type="Texture" id=2]
[ext_resource path="res://gui/icons/diamond.png" type="Texture" id=3]

[node name="Node2D" type="Node2D"]

script = ExtResource( 1 )

[node name="button_rename" type="Button" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 378.0
margin_top = 84.0
margin_right = 458.0
margin_bottom = 117.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Rename"
flat = false
align = 1

[node name="button_dismiss" type="Button" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 378.0
margin_top = 134.0
margin_right = 458.0
margin_bottom = 167.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Dismiss"
flat = false
align = 1

[node name="field_heroName" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 175.0
margin_top = 33.0
margin_right = 429.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "### HERO NAME HERE ######"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="field_levelAndClass" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 175.0
margin_top = 52.0
margin_right = 357.0
margin_bottom = 67.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "X CLASS"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="field_xp" type="Label" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 175.0
margin_top = 72.0
margin_right = 362.0
margin_bottom = 87.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "XXX/YYY xp"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="button_trainOrRecruit" type="Button" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 147.0
margin_top = 108.0
margin_right = 337.0
margin_bottom = 178.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "TRAIN"
icon = ExtResource( 2 )
flat = false
align = 1

[node name="button_back" type="Button" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 141.0
margin_top = 807.0
margin_right = 331.0
margin_bottom = 866.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Back"
flat = false
align = 1

[node name="hbox_items" type="HBoxContainer" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 225.0
margin_right = 480.0
margin_bottom = 289.0
rect_min_size = Vector2( 0, 64 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Rect" ]

[node name="hbox_items2" type="HBoxContainer" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 331.0
margin_right = 480.0
margin_bottom = 395.0
rect_min_size = Vector2( 0, 64 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Rect" ]

[node name="vbox_stats1" type="VBoxContainer" parent="." index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 68.0
margin_top = 476.0
margin_right = 228.0
margin_bottom = 780.0
rect_min_size = Vector2( 160, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="vbox_stats2" type="VBoxContainer" parent="." index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 254.0
margin_top = 475.0
margin_right = 414.0
margin_bottom = 779.0
rect_min_size = Vector2( 160, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="confirm_rename_dialog" type="ConfirmationDialog" parent="." index="11"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 67.0
margin_top = 221.0
margin_right = 417.0
margin_bottom = 389.0
rect_min_size = Vector2( 200, 70 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "Rename Hero"
resizable = false
dialog_text = "Enter new name"
dialog_hide_on_ok = true
_sections_unfolded = [ "Dialog" ]

[node name="LineEdit" type="LineEdit" parent="confirm_rename_dialog" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 22.0
margin_right = 342.0
margin_bottom = 132.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[node name="confirm_dismiss_dialog" type="ConfirmationDialog" parent="." index="12"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 98.0
margin_top = 218.0
margin_right = 398.0
margin_bottom = 358.0
rect_min_size = Vector2( 200, 70 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "Dismiss hero?"
resizable = false
dialog_hide_on_ok = true

[node name="Label2" type="RichTextLabel" parent="confirm_dismiss_dialog" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 8.0
margin_right = 292.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Are you sure you want to kick this hero out of your guild? This action is permanent!  "
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false

[node name="confirm_instant_train" type="ConfirmationDialog" parent="." index="13"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 105.0
margin_top = 200.0
margin_right = 395.0
margin_bottom = 356.0
rect_min_size = Vector2( 200, 70 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "Instant Training"
resizable = false
dialog_hide_on_ok = true
_sections_unfolded = [ "Dialog" ]
__meta__ = {
"_edit_lock_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="confirm_instant_train" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 8.0
margin_right = 282.0
margin_bottom = 120.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "This hero doesn't have enough XP to train to the next level. Do you want to INSTANT TRAIN for 1 diamond?"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="confirm_instant_train" index="4"]

position = Vector2( 140.7, 89.5623 )
texture = ExtResource( 3 )

[connection signal="pressed" from="button_rename" to="." method="_on_button_rename_pressed"]

[connection signal="pressed" from="button_dismiss" to="." method="_on_button_dismiss_pressed"]

[connection signal="pressed" from="button_trainOrRecruit" to="." method="_on_button_train_pressed"]

[connection signal="pressed" from="button_back" to="." method="_on_button_back_pressed"]

[connection signal="confirmed" from="confirm_rename_dialog" to="." method="_on_rename_dialogue_confirmed"]

[connection signal="confirmed" from="confirm_dismiss_dialog" to="." method="_on_confirm_dismiss_dialog_confirmed"]

[connection signal="confirmed" from="confirm_instant_train" to="." method="_on_confirm_instant_train_confirmed"]


